# urls-le

./: .gitattributes  .gitignore  CHANGELOG.md  LICENSE  README.md  biome.json  package.json  package.nls.json  tsconfig.json  vitest.config.ts
coverage/: index.html
docs/: ARCHITECTURE.md  COMMANDS.md  I18N.md  PERFORMANCE.md
docs/governance/: CHANGELOG_GOVERNANCE.md  FALSE_CLAIMS_GOVERNANCE.md
release/: urls-le-1.4.5.vsix  urls-le-1.4.6.vsix
sample/: Cargo.toml  README.md  api-config.json  app-imports.js  application.properties  config.ini  config.yaml  documentation.md  pom.xml  styles.css  web-page.html
scripts/: generate-perf-data.ts
src/: extension.ts  types.ts
src/__mocks__/: vscode.ts
src/commands/: dedupe.ts  extract.ts  help.ts  index.ts  sort.ts  toggleCsvStreaming.ts
src/config/: config.ts  settings.ts  settingsSchema.test.ts  settingsSchema.ts
src/extraction/: collect.test.ts  collect.ts  extract.test.ts  extract.ts  performance.bench.ts  performance.test.ts
src/i18n/: package.nls.de.json  package.nls.es.json  package.nls.fr.json  package.nls.id.json  package.nls.it.json  package.nls.ja.json  package.nls.ko.json  package.nls.pt-br.json  package.nls.ru.json  package.nls.uk.json  package.nls.vi.json  package.nls.zh-cn.json
src/providers/: urlProvider.ts
src/services/: serviceFactory.ts
src/telemetry/: telemetry.ts
src/ui/: largeOutput.ts  notifier.ts  prompts.ts  statusBar.ts  webView.ts
src/utils/: accessibility.ts  analysis.test.ts  analysis.ts  configValidator.ts  errorHandling.ts  localization.ts  (+7 more)
test/: vscode.mock.ts
(+21 files in other folders)
